# cubed-xarray

./: .pre-commit-config.yaml  HOW_TO_RELEASE.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml
cubed_xarray/: __init__.py  cubedmanager.py
cubed_xarray/tests/: test_wrapping.py  test_xarray.py
