[project]
name = "cubed-xarray"
version = "0.0.7"
authors = [
    {name = "Tom Nicholas", email = "tomnicholas1@googlemail.com"}
]
description = "Interface for using cubed with xarray for parallel computation."
license = {text = "Apache-2"}
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
    "numpy >= 1.22",
    "xarray >= 2024.09.0",
    "cubed >= 0.17.0",
]



[project.optional-dependencies]
test = [
    "cubed[diagnostics]",
    "dill",
    "pre-commit",
    "ruff",
    "pytest-mypy",
    "pytest-cov",
    "pytest",
]


[project.urls]
homepage = "https://github.com/xarray-contrib/cubed-xarray"
documentation = "https://github.com/xarray-contrib/cubed-xarray#readme"
repository = "https://github.com/xarray-contrib/cubed-xarray"

[tool.setuptools.packages.find]
include = [
    "cubed_xarray",
    "cubed_xarray.tests",
]

[project.entry-points."xarray.chunkmanagers"]
cubed = "cubed_xarray.cubedmanager:CubedManager"

[build-system]
requires = ["setuptools >= 64", "setuptools_scm >= 7.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "999"

[tool.pytest.ini_options]
junit_family = "xunit2"


[mypy]
files = "cubed_xarray/**/*.py"
show_error_codes = true

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4
target-version = "py39"

exclude = [
    "docs",
    ".eggs"]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "I"]
per-file-ignores = {}

# E402: module level import not at top of file
# E731: do not assign a lambda expression, use a def
# W503: line break before binary operator - not implimeted by ruff due to conflict with PEP8.

ignore = ["E402", "E731"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Indent with spaces, rather than tabs.
indent-style = "space"
# Respect magic trailing commas.
skip-magic-trailing-comma = false
# Automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["cubed_xarray"]
